@@ -1,3 +1,6 @@
+2006-01-22	Richard van den Berg  <richard@vdberg.org>
+	* Allow report_url to change syslog facility
+
 2005-12-19	Richard van den Berg  <richard@vdberg.org>
 	* Revert check_list_for_match to old behaviour (Marc Haber)
 	* Documentation update (Marc Haber)
